# Exact_2026_Laplace-s_Red_Devils

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  MODEL_CONTRACT.md  README.md  STRATEGY_TYPE2_PHYSICS.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
EXACT_Materials/: EXTRACT_Slides.md  QA.md
Logic_Based_Educational_Queries_Project/: .env.example  .gitignore  LICENSE  Makefile  README.md  fol_diagnostic.csv  requirements.txt  setup.py
Logic_Based_Educational_Queries_Project/configs/: fol_model.yaml  fol_pretrain.yaml  fol_z3.yaml  logic_model.yaml
Logic_Based_Educational_Queries_Project/docs/: DESIGN_FOL_RM_AND_STAGE2.md  README_LOGIC_PIPELINE.md
Logic_Based_Educational_Queries_Project/notebooks/: eda_and_preprocessing.ipynb  fol_model_pipeline_official.ipynb  fol_model_stage_drive.py  fol_model_stage_push.py  fol_model_stage_train.py  logic_model_pipeline_official.ipynb  logic_model_stage_drive.py  logic_model_stage_push.py  logic_model_stage_train.py  pipeline_baseline.ipynb  prepare_augmented_data.ipynb  project_bootstrap.py  test_fol_pretrain.ipynb
Logic_Based_Educational_Queries_Project/scripts/: requirements_fol.txt  run_fol_pretrain.sh  run_fol_train.sh  run_fol_z3_inference.sh
Logic_Based_Educational_Queries_Project/src/: __init__.py
app/: main.py
app/api/: schemas.py
app/core/: config.py  pipeline.py
app/data/: DATA_CATALOG.md
app/model/: llm_client.py
docs/: v05_handoff_prompt.md
scripts/: filter_dataset.py  generate_catalog.py  run_and_pull.ps1  run_and_pull.sh  start_server.sh
(+1488 files in other folders)
